to leave fragile proofs unaffected.


*** FOL ***

* Added the "at most 1" quantifier, Uniq, as in HOL.

* Simproc defined_all and rewrite rule subst_all perform
more aggressive substitution with variables from assumptions.
INCOMPATIBILITY, use something like
"supply subst_all [simp del] [[simproc del: defined_all]]"
to leave fragile proofs unaffected.


*** ML ***

* Antiquotations @{scala_function} and @{scala} refer to registered
Isabelle/Scala functions (of type String => String): invocation works
via the PIDE protocol.


*** System ***

* System option "pide_session" is enabled by default, notably for
standard "isabelle build": it allows to invoke Isabelle/Scala operations
from Isabelle/ML. Big build jobs (e.g. AFP) require extra heap space for
the java process, e.g. like this in $ISABELLE_HOME_USER/etc/settings:

  ISABELLE_TOOL_JAVA_OPTIONS="$ISABELLE_TOOL_JAVA_OPTIONS -Xmx8g"

* The command-line tool "isabelle console" now supports interrupts
properly (on Linux and macOS).

* The command-line tool "isabelle sessions" explores the structure of
Isabelle sessions and prints result names in topological order (on
stdout).

* The Isabelle/Scala "Progress" interface changed slightly and
"No_Progress" has been discontinued. INCOMPATIBILITY, use "new Progress"
instead.

* General support for Isabelle/Scala system services, configured via the
shell function "isabelle_scala_service" in etc/settings (e.g. of an
Isabelle component); see implementations of class
Isabelle_System.Service in Isabelle/Scala. This supersedes former
"isabelle_scala_tools" and "isabelle_file_format": minor
INCOMPATIBILITY.

* Isabelle/Phabricator setup has been updated to follow ongoing
development: libphutil has been discontinued. Minor INCOMPATIBILITY:
existing server installations should remove libphutil from
/usr/local/bin/isabelle-phabricator-upgrade and each installation root
directory (e.g. /var/www/phabricator-vcs/libphutil).



New in Isabelle2020 (April 2020)